# subconverter

./: CMAKE_BUILD_GUIDE.md  CMakeLists.txt  Makefile
.github/workflows/: build-static-library.yml  lib_build.yml
scripts/: build.ubuntu.library.sh
src/generator/config/: subexport.cpp
src/lib/: node_export.cpp  node_export.h
src/parser/: subparser.cpp
src/utils/: rapidjson_extra.h
src/utils/ini_reader/: ini_reader.h
